--- a/.github/workflows/coding-stats.yml
+++ b/.github/workflows/coding-stats.yml
@@ -1,16 +1,16 @@
-name: Update Programming Activity
+name: Waka Readme
 
 on:
   schedule:
-    - cron: "0 0 * * 0"
+    # Runs at 12am IST
+    - cron: '30 18 * * *'
   workflow_dispatch:
-
 jobs:
-  build:
+  update-readme:
+    name: Update Readme with Metrics
     runs-on: ubuntu-latest
-    name: Update this repo's README with recent activity
-
     steps:
-      - uses: jathul/waka-readme@master
-        env:
-          WAKATIME_API_TOKEN: ${{ secrets.WAKATIME_API_KEY }}
+      - uses: anmol098/waka-readme-stats@master
+        with:
+          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
