--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -1,8 +1,8 @@
-name: Update Github Activity
+name: Update README
 
 on:
   schedule:
-    - cron: "0 0 * * 0"
+    - cron: '*/30 * * * *'
   workflow_dispatch:
 
 jobs:
