--- a/.github/workflows/recent-activity.config.yml
+++ b/.github/workflows/recent-activity.config.yml
@@ -1,5 +1,5 @@
 settings:
   date:
-    timezone: "UTC+10:30"
+    timezone: "Australia/Adelaide"
     text: "Last Updated: {DATE} (Australian Central Daylight Time)"
     format: "dddd, mmmm dS, yyyy, h:MM:ss TT"
